I preffer Dogs, lol

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       src="https://kit.fontawesome.com/10b9adabac.js"
       crossorigin="anonymous"
     ></script>
-    <title>CAT APP</title>
+    <title>DOG APP</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Mukta:wght@400;600&family=Roboto:ital,wght@0,500;1,300;1,500&display=swap"
       rel="stylesheet"
@@ -20,16 +20,13 @@
     <div id="body-grid">
       <header>
         <h1>
-          <i class="fa-solid fa-paw"></i> Cats Image App
+          <i class="fa-solid fa-paw"></i> Dog Image App
           <i class="fa-solid fa-paw"></i>
         </h1>
         <span id="error"></span>
       </header>
       <main>
-        <h2>
-          <i class="fa-solid fa-cat"></i> Random Cats
-          <i class="fa-solid fa-cat"></i>
-        </h2>
+        <h2><i class="fa-solid fa-dog"></i> Random Dogs</h2>
         <section id="randomMichis" class="images-grid">
           <article class="img-container">
             <img height="250px" width="250px" src="" alt="" id="img1" />
@@ -68,11 +65,11 @@
         <section class="favorite-container">
           <div class="tittle-favorite">
             <h2>
-              <i class="fa-solid fa-shield-cat"></i> Favorite cats
-              <i class="fa-solid fa-shield-cat"></i>
+              <i class="fa-solid fa-shield-dog"></i> Favorite Dogs
+              <i class="fa-solid fa-shield-dog"></i>
             </h2>
             <button id="outFavorite" onclick="UpdateFavoriteCat()">
-              Show the favorite
+              Show the favorite <i class="fa-solid fa-bone"></i>
             </button>
           </div>
 
