--- a/index.html
+++ b/index.html
@@ -62,6 +62,21 @@
         <button onclick="loadRandomCat()" id="reload-button">
           Reload <i class="fa-solid fa-arrows-rotate"></i>
         </button>
+
+
+        <section id="uploadingDog">
+          <h2><i class="fa-solid fa-bone"></i>  Upload your dog images  <i class="fa-solid fa-bone"></i></h2>
+
+          <form id="uploadingForm">
+            <label for="file" id="upload-label">
+              <span>Upload your dog picture! </span><i class="fa-solid fa-cloud-arrow-up"></i>
+              <input type="file" id="file" name="file" />
+            </label>
+            <button type="button" onclick="uploadDogImage()">Upload Dog</button>
+          </form>
+        </section>
+
+
         <section class="favorite-container">
           <div class="tittle-favorite">
             <h2>
@@ -69,7 +84,7 @@
               <i class="fa-solid fa-shield-dog"></i>
             </h2>
             <button id="outFavorite" onclick="UpdateFavoriteCat()">
-              Show the favorite <i class="fa-solid fa-bone"></i>
+              Show the favorite </i>
             </button>
           </div>
 
