use axios for the APIS

--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
       </footer>
     </div>
 
-    <script src="./script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="./axios.js"></script>
+    <!-- <script src="./fetch.js"></script> -->
   </body>
 </html>
