change the name of functions and id by 'Dog'

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </header>
       <main>
         <h2><i class="fa-solid fa-dog"></i> Random Dogs</h2>
-        <section id="randomMichis" class="images-grid">
+        <section id="randomDog" class="images-grid">
           <article class="img-container">
             <img height="250px" width="250px" src="" alt="" id="img1" />
             <button id="button1" class="favoriteButton">
@@ -59,7 +59,7 @@
             </button>
           </article>
         </section>
-        <button onclick="loadRandomCat()" id="reload-button" class="importanBtn">
+        <button onclick="loadRandomDog()" id="reload-button" class="importanBtn">
           Reload <i class="fa-solid fa-arrows-rotate"></i>
         </button>
 <hr>
@@ -83,12 +83,12 @@
               <i class="fa-solid fa-shield-dog"></i> Favorite Dogs
               <i class="fa-solid fa-shield-dog"></i>
             </h2>
-            <button id="outFavorite" onclick="UpdateFavoriteCat()" class="importanBtn">
+            <button id="outFavorite" onclick="UpdateFavoriteDog()" class="importanBtn">
               Show the favorite </i>
             </button>
           </div>
 
-          <section id="favoriteMichis" class="images-grid"></section>
+          <section id="favoriteDog" class="images-grid"></section>
         </section>
       </main>
       <footer>
